// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Question matches snapshot for individual 1`] = `
<ForwardRef
  fluid={false}
>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef>
      <ForwardRef
        fluid={false}
      >
        <h1
          className="capitalized"
        >
          individual
           assessment
        </h1>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <h2>
        Question #
        1
      </h2>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <ForwardRef
        inline={false}
      >
        <p>
          In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?
        </p>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="24"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="47"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="96"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="49"
            type="checkbox"
          />
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <p>
        <ForwardRef
          active={true}
          animated={false}
          isChild={false}
          label="0%"
          max={100}
          min={0}
          now={0}
          srOnly={true}
          striped={false}
        />
      </p>
    </ForwardRef>
  </ForwardRef>
  <UNDEFINED />
</ForwardRef>
`;

exports[`components/Question matches snapshot for team 1`] = `
<ForwardRef
  fluid={false}
>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef>
      <ForwardRef
        fluid={false}
      >
        <h1
          className="capitalized"
        >
          team
           assessment
        </h1>
        <p>
          0
           of 
          0
           team members have answered this question.
        </p>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <h2>
        Question #
        1
      </h2>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <ForwardRef
        inline={false}
      >
        <p>
          In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?
        </p>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="24"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="47"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="96"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="49"
            type="checkbox"
          />
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <p>
        <ForwardRef
          active={true}
          animated={false}
          isChild={false}
          label="0%"
          max={100}
          min={0}
          now={0}
          srOnly={true}
          striped={false}
        />
      </p>
    </ForwardRef>
  </ForwardRef>
  <UNDEFINED>
    <withRouter(LinkContainer)
      to="/question/2"
    >
      <ForwardRef
        active={false}
        disabled={false}
        variant="success"
      >
        Next
      </ForwardRef>
    </withRouter(LinkContainer)>
  </UNDEFINED>
</ForwardRef>
`;

exports[`components/Question matches snapshot for team all answered 1`] = `
<ForwardRef
  fluid={false}
>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef>
      <ForwardRef
        fluid={false}
      >
        <h1
          className="capitalized"
        >
          team
           assessment
        </h1>
        <p>
          0
           of 
          1
           team members have answered this question.
        </p>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <h2>
        Question #
        1
      </h2>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <ForwardRef
        inline={false}
      >
        <p>
          In a lake, there is a patch of lily pads. Every day, the patch doubles in size. If it takes 48 days for the patch to cover the entire lake, how long would it take for the patch to cover half of the lake?
        </p>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="24"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="47"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="96"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="49"
            type="checkbox"
          />
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <p>
        <ForwardRef
          active={true}
          animated={false}
          isChild={false}
          label="0%"
          max={100}
          min={0}
          now={0}
          srOnly={true}
          striped={false}
        />
      </p>
    </ForwardRef>
  </ForwardRef>
  <UNDEFINED>
    <withRouter(LinkContainer)
      to="/question/2"
    >
      <ForwardRef
        active={false}
        disabled={true}
        variant="success"
      >
        Next
      </ForwardRef>
    </withRouter(LinkContainer)>
  </UNDEFINED>
</ForwardRef>
`;

exports[`components/Question matches snapshot for team last question 1`] = `
<ForwardRef
  fluid={false}
>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef>
      <ForwardRef
        fluid={false}
      >
        <h1
          className="capitalized"
        >
          team
           assessment
        </h1>
        <p>
          0
           of 
          0
           team members have answered this question.
        </p>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <h2>
        Question #
        2
      </h2>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <ForwardRef
        inline={false}
      >
        <p>
          A bat and a ball cost $1.10 in total. The bat costs $1.00 more than the ball. How much does the ball cost?
        </p>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="$0.05"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="$0.06"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="$0.10"
            type="checkbox"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            checked={false}
            label="$0.50"
            type="checkbox"
          />
        </ForwardRef>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef
      xs={12}
    >
      <p>
        <ForwardRef
          active={true}
          animated={false}
          isChild={false}
          label="50%"
          max={100}
          min={0}
          now={50}
          srOnly={true}
          striped={false}
        />
      </p>
    </ForwardRef>
  </ForwardRef>
  <UNDEFINED>
    <withRouter(LinkContainer)
      to="/summary"
    >
      <ForwardRef
        active={false}
        disabled={false}
        variant="success"
      >
        Next
      </ForwardRef>
    </withRouter(LinkContainer)>
  </UNDEFINED>
</ForwardRef>
`;
